--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic2-app-base",
   "app_id": "c53c6c00",
-  "typescript": true,
-  "v2": true
+  "integrations": {},
+  "type": "ionic-angular"
 }
