--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.1.2",
-    "@angular/compiler": "4.1.2",
-    "@angular/compiler-cli": "4.1.2",
-    "@angular/core": "4.1.2",
-    "@angular/forms": "4.1.2",
-    "@angular/http": "4.1.2",
-    "@angular/platform-browser": "4.1.2",
-    "@angular/platform-browser-dynamic": "4.1.2",
-    "@ionic-native/core": "3.10.3",
-    "@ionic-native/splash-screen": "^3.10.3",
-    "@ionic-native/status-bar": "3.10.3",
-    "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.3.0",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/http": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/core": "4.7.0",
+    "@ionic-native/splash-screen": "4.7.0",
+    "@ionic-native/status-bar": "4.7.0",
+    "@ionic/storage": "2.1.3",
+    "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.1.1",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "^0.8.11"
+    "rxjs": "5.5.8",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.3.7",
-    "typescript": "2.3.4"
+    "@ionic/app-scripts": "3.1.9",
+    "typescript": "2.7.2"
   }
 }
